# owasp-llm-top-10-course

./: README.md  docker-compose.yml  llm03_training_data_poisoning.ipynb  ometria.excalidraw
campaign_bot/: .dockerignore  .env.example  Dockerfile  PRD.md  README.md  docker-compose.yml  pyproject.toml
campaign_bot/app/: __init__.py  config.py  data_store.py  demo_payloads.py  exceptions.py  llm.py  main.py  models.py  prompt_builder.py
campaign_bot/data/: customers.json  segments.json
campaign_bot/docs/: DEMO_SCRIPT.md  LIVE_VS_STUB.md  PAYLOADS.md
campaign_bot/payloads/: direct-injection-brief.txt  happy-path-brief.txt  output-handling-brief.txt  scenarios.json
campaign_bot/prompts/: system-hardened.txt  system-lab.txt
campaign_bot/static/: style.css
campaign_bot/templates/: index.html
data/: README.md  customers.json
docs/: pre_course_setup.md  workshop_agenda.md
insight_agent/: .env.example  .gitignore  Dockerfile  PRD.md  README.md  docker-compose.yml  pyproject.toml
insight_agent/app/: __init__.py  actions.py  config.py  db.py  demo_payloads.py  exceptions.py  llm.py  main.py  models.py
insight_agent/app/agent/: __init__.py  loop.py  memory.py  planner.py  (+1 more)
insight_agent/docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  LIVE_VS_STUB.md  PAYLOADS.md
insight_agent/payloads/: agency-export.txt  agency-send.txt  direct-export-all.txt  happy-read.txt  indirect-count.txt  prompt-leak.txt  scenarios.json
insight_agent/prompts/: system-hardened.txt  system-lab.txt  tools-catalog.txt
insight_agent/static/: style.css
insight_agent/templates/: index.html
(+5 files in other folders)
