[project]
name = "campaign-bot"
version = "0.1.0"
description = "Intentionally vulnerable OWASP LLM demo app (lab use only)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
]

[project.scripts]
campaign-bot = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
