[project]
name = "campaign-bot"
version = "0.3.0"
description = "Intentionally vulnerable OWASP LLM demo app (lab use only)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
]

[project.scripts]
campaign-bot = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"static" = "static"
"templates" = "templates"
"data" = "data"
"prompts" = "prompts"
"payloads" = "payloads"
